Add support for authorization plugins
